syntax = "proto3";

package template.file.v1;

import "envelope.proto";
import "google/protobuf/timestamp.proto";

service Health {
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

message HealthCheckRequest {
  saflib.common.v1.SafAuth auth = 1;
  saflib.common.v1.SafRequest request = 2;
}

message HealthCheckResponse {
  string status = 1;
  google.protobuf.Timestamp current_time = 2;
}
